--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,15 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.test.raisin.BeChallenge'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.7.2'
